Optimized PolyHistogram engine and added more comments.