@@ -3,7 +3,9 @@ package com.digero.maestro.abc;
 import java.io.IOException;
 import java.util.*;
 import java.util.Map.Entry;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.logging.Logger;
 
 import com.digero.common.abc.AbcConstants;
 import com.digero.common.abc.LotroInstrument;
@@ -16,11 +18,21 @@ import com.digero.common.util.Pair;
 import com.digero.common.util.Triple;
 import com.digero.maestro.midi.AbcNoteEvent;
 import com.digero.maestro.midi.Chord;
+import com.digero.maestro.midi.SequenceDataCache;
 
+/**
+ * Counts the number of notes playing at any given time.
+ *
+ * Each preview generation gets its own instance, and applyPreview will set it as current.
+ * Preview generation calls count(). The other methods are called in/after applyPreview,
+ * and at that point generation is finished and no longer can call count().
+ * This should avoid multithreading issues.
+ */
 public class PolyphonyHistogram   {
+	private static final Logger log = Logger.getLogger("export.preview.histogram");
 
-    /** partID -> abcMicros -> (tick, numberOfNotes) */
-	private final Map<Long, TreeMap<Long, Triple<Long,Integer,Long>>> histogramData = new HashMap<>();
+    /** partID -> abcMicros -> (tick, numberOfNotes, midiMicros) */
+	private final Map<Long, TreeMap<Long, Triple<Long,Integer,Long>>> histogramData = new ConcurrentHashMap<>();
     /** abcMicros -> tick,numberOfNotes */
 	private TreeMap<Long, Pair<Long,Integer>> sum = new TreeMap<>();
     /** partID -> midiMicros,numberOfNotes */
@@ -30,13 +42,13 @@ public class PolyphonyHistogram   {
 	private int max = 0;
     private double average = 0;
     private int maxAll = 0;
-
     private long peakTick = 0L;
+
 	public static boolean enabled = true;// set to true to enable this system, set to false to save cpu power.
 	private final Listener<SequencerEvent> listener = new MyListener();
 	private LotroSequencerWrapper abcSeq = null;
 	
-	public static volatile AtomicInteger successes = new AtomicInteger(0);//debug for abctools (organic1=118 organic2=44) approx factor 3
+	public static AtomicInteger successes = new AtomicInteger(0);//debug for abctools (organic1=118 organic2=44) approx factor 3
 
 	public void setSequencer(LotroSequencerWrapper abcSequencer) {
 		if (abcSeq != null) abcSeq.removeChangeListener(listener);
@@ -49,7 +61,9 @@ public class PolyphonyHistogram   {
         if (enabled) {
             str += "Max polyphony in active parts = " + max();
             str += "\nMax export polyphony = " + maxAll();
-            str += "\nAverage export polyphony = %.1f".formatted(average).replace(",", ".") + "\n";
+            str += "\nAverage export polyphony = ";
+			str += String.format(Locale.US, "%.1f", average);
+			str += "\n";
         }
         return str;
     }
@@ -59,6 +73,7 @@ public class PolyphonyHistogram   {
 		public void onEvent(SequencerEvent e) {
 			switch (e.getProperty()) {
 				case TRACK_ACTIVE:
+					// solo/mute was called on a track
 					setDirty();
 					break;
 				case DRAG_POSITION:
@@ -80,10 +95,22 @@ public class PolyphonyHistogram   {
 	 *
      */
 	public void count(AbcPart part, List<Chord> chords, boolean organic, QuantizedTimingInfo qtm) throws IOException {
-		if (!enabled) return;
-		
+
+		// The map we will populate
 		TreeMap<Long, Triple<Long,Integer,Long>> partMap = new TreeMap<>();
-		List<AbcNoteEvent> done = new ArrayList<>();
+
+		// Events we have done and should skip
+		Set<AbcNoteEvent> done = Collections.newSetFromMap(new IdentityHashMap<>());//O(1) vs O(n) for ArrayList
+
+		// we need this to convert to source-midi-ticks since that's what the histogramPanel uses.
+		// we also store tick, as FakeNoteEvents used to display the histogram is made of those.
+		// Those tick are not really used though.
+		SequenceDataCache cache = part.getAbcSong().getSequenceInfo().getDataCache();
+
+		final LotroInstrument instrument = part.getInstrument();
+		final String friendlyName = instrument.friendlyName;
+		final boolean cowbell = instrument == LotroInstrument.BASIC_COWBELL || instrument == LotroInstrument.MOOR_COWBELL;
+
 		for (Chord chord : chords) {
 			for (AbcNoteEvent event : chord.getNotes()) {
 				if (event.note.id == Note.REST.id || done.contains(event)) {
@@ -109,49 +136,57 @@ public class PolyphonyHistogram   {
 					startMicros = qtm.tickToMicrosABC(event.getStartTick(), part);// delay is already in the start/end tick at this point 
 					endMicros   = qtm.tickToMicrosABC(endTick, part);
 				}
-				if (part.getInstrument().isSustainable(event.note.id)) {
+				if (instrument.isSustainable(event.note.id)) {
+					// Sustained notes will ring on for 200 ms after ending unless their sample has ran out.
+					// We calc that here.
 					endMicros += 200000L;// 200ms
-					Long duraMicros = LotroInstrumentSampleDuration.getDura(part.getInstrument().friendlyName, event.note.id);
+					Long duraMicros = LotroInstrumentSampleDuration.getDura(friendlyName, event.note.id);
 					if (duraMicros != null) {
 						long endMax = startMicros + duraMicros;
 						endMicros = Math.min(endMax, endMicros);
 					}
                 } else {
+					// Non-sustained notes always ring out entire sample.
 					int pitch = event.note.id;
-					if (part.getInstrument() == LotroInstrument.BASIC_COWBELL || part.getInstrument() == LotroInstrument.MOOR_COWBELL) {
+					if (cowbell) {
 						pitch = AbcConstants.COWBELL_NOTE_ID;
 					}
-					Long duraMicros = LotroInstrumentSampleDuration.getDura(part.getInstrument().friendlyName, pitch);
+					Long duraMicros = LotroInstrumentSampleDuration.getDura(friendlyName, pitch);
 					if (duraMicros == null) {
-						System.err.println("Error: LotroInstrumentSampleDuration has no "+part.getInstrument().friendlyName+" with note "+event.note.id);
+						log.warning("LotroInstrumentSampleDuration has no "+friendlyName+" with note "+event.note.id);
 						duraMicros = AbcConstants.ONE_SECOND_MICROS;
 					}
 					endMicros = startMicros + duraMicros;
                 }
                 if (organic) {
+					// Ticks is needed to convert from ABC micros to midi-micros
                     endTick   = qtm.microsToTickABCOrganic(endMicros);
                 } else {
                     endTick   = qtm.microsToTickABC(endMicros);
                 }
                 if (endMicros == startMicros) continue;
 
+				// Add/modify a triple to the partMap, increase by 1 when the note start, decrease by 1 when it stops.
                 Triple<Long,Integer,Long> oldStart = partMap.get(startMicros);
 				if (oldStart == null) {
-					oldStart = new Triple<>(event.getStartTick(), 0, part.getAbcSong().getSequenceInfo().getDataCache().tickToMicros(event.getStartTick()));
+					oldStart = new Triple<>(event.getStartTick(), 0, cache.tickToMicros(event.getStartTick()));
+					partMap.put(startMicros, oldStart);
 				}
 				oldStart.second += 1;
-				partMap.put(startMicros, oldStart);
 				
 				Triple<Long,Integer,Long> oldEnd = partMap.get(endMicros);
 				if (oldEnd == null) {
-					oldEnd = new Triple<>(endTick, 0, part.getAbcSong().getSequenceInfo().getDataCache().tickToMicros(endTick));
+					oldEnd = new Triple<>(endTick, 0, cache.tickToMicros(endTick));
+					partMap.put(endMicros, oldEnd);
 				}
 				oldEnd.second -= 1;
-				partMap.put(endMicros, oldEnd);
 				
 				assert endMicros - startMicros > 0L;
 			}
 		}
+		// Since this method gets called by copies of abcsong and abcparts,
+		// we reference a uniqueID so the HistogramPanel can use the original abcPart
+		// as key for the data.
 		histogramData.put(part.uniqueID, partMap);
 		dirty = true;
 	}
@@ -163,7 +198,7 @@ public class PolyphonyHistogram   {
 	/**
 	 * 
 	 * Debug method to check whether inserting rests in chord to make them shorter and allow
-	 * for more part polyphony actually has an effect. Will print to sysout if more than 6 notes
+	 * for more part polyphony actually has an effect.
 	 * playing in part.
 	 * 
 	 * This method does NOT take decay in consideration.
@@ -172,7 +207,10 @@ public class PolyphonyHistogram   {
 	public int maxPolyInPart(AbcPart part, List<Chord> chords, boolean organic, QuantizedTimingInfo qtm) throws IOException {
 	
 		TreeMap<Long, Pair<Long,Integer>> partMap = new TreeMap<>();
-		List<AbcNoteEvent> done = new ArrayList<>();
+		Set<AbcNoteEvent> done = Collections.newSetFromMap(new IdentityHashMap<>());//O(1) vs O(n) for ArrayList
+		final LotroInstrument instrument = part.getInstrument();
+		final String friendlyName = instrument.friendlyName;
+		final boolean cowbell = instrument == LotroInstrument.BASIC_COWBELL || instrument == LotroInstrument.MOOR_COWBELL;
 		for (Chord chord : chords) {
 			for (AbcNoteEvent event : chord.getNotes()) {
 				if (event.note.id == Note.REST.id || done.contains(event)) {
@@ -198,22 +236,22 @@ public class PolyphonyHistogram   {
 					startMicros = qtm.tickToMicrosABC(event.getStartTick(), part);// delay is already in the start/end tick at this point 
 					endMicros   = qtm.tickToMicrosABC(endTick, part);
 				}
-				if (part.getInstrument().isSustainable(event.note.id)) {
+				if (instrument.isSustainable(event.note.id)) {
 					endMicros += 0;//200000L;// 200ms
-					Long duraMicros = LotroInstrumentSampleDuration.getDura(part.getInstrument().friendlyName, event.note.id);
+					Long duraMicros = LotroInstrumentSampleDuration.getDura(friendlyName, event.note.id);
 					if (duraMicros != null) {
 						long endMax = startMicros + duraMicros;
 						endMicros = Math.min(endMax, endMicros);
 					}
                 } else {
 					int pitch = event.note.id;
-					if (part.getInstrument() == LotroInstrument.BASIC_COWBELL || part.getInstrument() == LotroInstrument.MOOR_COWBELL) {
+					if (cowbell) {
 						pitch = AbcConstants.COWBELL_NOTE_ID;
 					}
 					/*
-					Long duraMicros = LotroInstrumentSampleDuration.getDura(part.getInstrument().friendlyName, pitch);
+					Long duraMicros = LotroInstrumentSampleDuration.getDura(friendlyName, pitch);
 					if (duraMicros == null) {
-						System.err.println("Error: LotroInstrumentSampleDuration has no "+part.getInstrument().friendlyName+" with note "+event.note.id);
+						System.err.println("Error: LotroInstrumentSampleDuration has no "+friendlyName+" with note "+event.note.id);
 						duraMicros = AbcConstants.ONE_SECOND_MICROS;
 					}
 					long endMax = startMicros + duraMicros;
@@ -230,17 +268,17 @@ public class PolyphonyHistogram   {
 				Pair<Long,Integer> oldStart = partMap.get(startMicros);
 				if (oldStart == null) {
 					oldStart = new Pair<>(event.getStartTick(), 0);
+					partMap.put(startMicros, oldStart);
 				}
 				oldStart.second += 1;
-				partMap.put(startMicros, oldStart);
 				
 				Pair<Long,Integer> oldEnd = partMap.get(endMicros);
 				if (oldEnd == null) {
 					oldEnd = new Pair<>(endTick, 0);
+					partMap.put(endMicros, oldEnd);
 				}
 				oldEnd.second -= 1;
-				partMap.put(endMicros, oldEnd);
-				
+
 				assert endMicros - startMicros > 0L;
 			}
 		}
@@ -269,8 +307,9 @@ public class PolyphonyHistogram   {
 	}
 	
 	/**
-	 * Expensive method, so only run when needed.
+	 * Expensive method, so only run when dirty.
 	 *
+	 * This method should only be called from EDT.
      */
 	public void sumUp(AbcSong song) {
 		sum = new TreeMap<>();
@@ -305,9 +344,9 @@ public class PolyphonyHistogram   {
 				Pair<Long,Integer> oldValue = songMap.get(micros);
 				if (oldValue == null) {
 					oldValue = new Pair<>(tick, 0);
+					songMap.put(micros, oldValue);
 				}
 				oldValue.second += noteStarts;
-				songMap.put(micros, oldValue);
 			}
 		}
 
@@ -343,9 +382,9 @@ public class PolyphonyHistogram   {
                 Pair<Long,Integer> oldValue = songMap.get(micros);
                 if (oldValue == null) {
                     oldValue = new Pair<>(tick, 0);
+					songMap.put(micros, oldValue);
                 }
                 oldValue.second += noteStarts;
-                songMap.put(micros, oldValue);
             }
         }
         entrySongSet = songMap.entrySet();
@@ -367,7 +406,7 @@ public class PolyphonyHistogram   {
             polyphony += entry.getValue().second;
             if (polyphony > maxAll) {
                 maxAll = polyphony;
-                peakTick = entry.getValue().first;
+                //peakTick = entry.getValue().first; we already calculated this from the non-muted parts.
             }
         }
         average = average / sumMicros;
@@ -406,11 +445,8 @@ public class PolyphonyHistogram   {
 	 */
 	public int get(long microsecond) {
         if (!enabled) return 0;
-		Long key = sum.floorKey(microsecond);
-		if (key == null) {
-			return 0;
-		}
-		return sum.get(key).second;
+		Entry<Long, Pair<Long,Integer>> entry = sum.floorEntry(microsecond);
+		return entry == null ? 0 : entry.getValue().second;
 	}
 
     /**
@@ -438,7 +474,7 @@ public class PolyphonyHistogram   {
 	
 	/**
 	 * Request the number of concurrently playing notes.
-	 * Be sure to call sumUp first if is dirty.
+	 * Be sure to call sumUp first if it is dirty.
 	 * 
 	 * @return Set with Number of notes being played at specific micros
 	 */
